--- a/isg-init.org
+++ b/isg-init.org
@@ -1703,8 +1703,8 @@
 
              (global-set-key (kbd "C-M-;") 'comment-region)
 
-             (global-set-key "\M-7" 'isg/start-shell)
-             (global-set-key "\M-8" 'isg/start-eshell)
+             (global-set-key "\M-&" 'isg/start-shell)
+             (global-set-key "\M-*" 'isg/start-eshell)
 
              (global-set-key (kbd "C-M-p") 'scroll-down-line)
              (global-set-key (kbd "C-M-n") 'scroll-up-line)
